// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a Tab 1`] = `
<Tab
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  errorMessage=""
  focus={false}
  height=""
  href={
    Object {
      "selectHandler": [MockFunction],
    }
  }
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[Function]}
  orientation="top"
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="tab title"
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tab"
      disabled={true}
      selected={false}
      sizing="normal"
      style={
        Object {
          "minWidth": "80px",
          "width": "",
        }
      }
      visible={true}
      xcss={
        Array [
          "
	border-right: solid 1px ",
          [Function],
          ";
	border-top: solid 1px ",
          [Function],
          ";

	&:first-child {
		border-left: solid 1px ",
          [Function],
          ";
	}
",
        ]
      }
    >
      <div
        className="ui-tab sc-gZMcBi ffOOPm"
        disabled={true}
        selected={false}
        style={
          Object {
            "minWidth": "80px",
            "width": "",
          }
        }
      >
        <Title
          bottom=""
          className=""
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={true}
          errorMessage=""
          focus={false}
          height=""
          href={
            Object {
              "selectHandler": [MockFunction],
            }
          }
          id=""
          layout={5}
          left=""
          location="none"
          noedit={true}
          nohover={false}
          noripple={true}
          obj="Tab"
          onClick={[Function]}
          onClose={[Function]}
          orientation="top"
          padding=""
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          title="tab title"
          tooltip=""
          top=""
          visible={true}
          widget={false}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-title-bar"
              disabled={true}
              layout={5}
              style={Object {}}
              visible={true}
            >
              <div
                className="ui-title-bar sc-htoDjs hokIEk"
                disabled={true}
                style={Object {}}
              >
                <Styled(Label)
                  bottom=""
                  className="ui-title"
                  contentEditable={false}
                  controlled={true}
                  direction="right"
                  disabled={true}
                  errorMessage=""
                  focus={false}
                  height=""
                  href={
                    Object {
                      "selectHandler": [MockFunction],
                    }
                  }
                  id=""
                  layout={5}
                  left=""
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  obj="Tab"
                  onClick={[Function]}
                  onClose={[Function]}
                  orientation="top"
                  padding=""
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  text="tab title"
                  theme={null}
                  title="tab title"
                  tooltip=""
                  top=""
                  visible={true}
                  widget={false}
                  width=""
                  xcss={
                    Array [
                      "
	text-align: left;
	flex: 5;
",
                    ]
                  }
                >
                  <Label
                    bottom=""
                    className="ui-title sc-iwsKbI eCIUBQ"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={true}
                    errorMessage=""
                    focus={false}
                    height=""
                    href={
                      Object {
                        "selectHandler": [MockFunction],
                      }
                    }
                    id=""
                    layout={5}
                    left=""
                    location="none"
                    noedit={true}
                    nohover={false}
                    noripple={true}
                    obj="Tab"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onClose={[Function]}
                    onDoubleClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onUpdate={[Function]}
                    orientation="top"
                    padding=""
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    text="tab title"
                    theme={null}
                    title="tab title"
                    tooltip=""
                    top=""
                    useedit={false}
                    visible={true}
                    widget={false}
                    width=""
                    xcss={
                      Array [
                        "
	text-align: left;
	flex: 5;
",
                      ]
                    }
                  >
                    <ThemeProvider
                      theme={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#c0c0c0",
                          "color": "#000000",
                          "headerBackgroundColor": "#004358",
                          "headerForegroundColor": "#ffffff",
                          "headerHoverColor": "#ffe11a",
                          "hoverColor": "#c0c0c0",
                          "inputBorderColor": "#c0c0c0",
                          "selectedBackgroundColor": "#1f8a70",
                          "selectedForegroundColor": "#ffe11a",
                          "tooltipBackgroundColor": "#708090",
                          "tooltipForegroundColor": "#ffffff",
                          "transitionDelay": "0.5s",
                        }
                      }
                    >
                      <styled.span
                        className="ui-label ui-title sc-iwsKbI eCIUBQ"
                        contentEditable={false}
                        disabled={true}
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        sizing="normal"
                        style={Object {}}
                        suppressContentEditableWarning={true}
                        visible={true}
                      >
                        <span
                          className="ui-label ui-title sc-iwsKbI eCIUBQ sc-gzVnrw hfmzzk"
                          contentEditable={false}
                          disabled={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDoubleClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={Object {}}
                          suppressContentEditableWarning={true}
                        >
                          tab title
                        </span>
                      </styled.span>
                    </ThemeProvider>
                  </Label>
                </Styled(Label)>
                <styled.div
                  bottom=""
                  className="ui-title-widget"
                  contentEditable={false}
                  controlled={true}
                  direction="right"
                  disabled={true}
                  errorMessage=""
                  focus={false}
                  height=""
                  href={
                    Object {
                      "selectHandler": [MockFunction],
                    }
                  }
                  id=""
                  layout={5}
                  left=""
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  obj="Tab"
                  onClick={[Function]}
                  onClose={[Function]}
                  orientation="top"
                  padding=""
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={null}
                  title="tab title"
                  tooltip=""
                  top=""
                  visible={true}
                  widget={false}
                  width=""
                  xcss={
                    Array [
                      "
	text-align: right;
	flex: 1;
",
                    ]
                  }
                >
                  <div
                    className="ui-title-widget sc-dnqmqq ePegIQ"
                    contentEditable={false}
                    direction="right"
                    disabled={true}
                    height=""
                    href={
                      Object {
                        "selectHandler": [MockFunction],
                      }
                    }
                    id=""
                    onClick={[Function]}
                    orientation="top"
                    selected={false}
                    style={Object {}}
                    title="tab title"
                    width=""
                  />
                </styled.div>
              </div>
            </styled.div>
          </ThemeProvider>
        </Title>
      </div>
    </styled.div>
  </ThemeProvider>
</Tab>
`;

exports[`Test making a Tab invisible 1`] = `
<Tab
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  href={
    Object {
      "selectHandler": [Function],
    }
  }
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[Function]}
  orientation="top"
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="tab title"
  tooltip=""
  top=""
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tab"
      disabled={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "minWidth": "80px",
          "width": "",
        }
      }
      visible={false}
      xcss={
        Array [
          "
	border-right: solid 1px ",
          [Function],
          ";
	border-top: solid 1px ",
          [Function],
          ";

	&:first-child {
		border-left: solid 1px ",
          [Function],
          ";
	}
",
        ]
      }
    >
      <div
        className="ui-tab sc-gZMcBi kaCebG"
        disabled={false}
        selected={false}
        style={
          Object {
            "minWidth": "80px",
            "width": "",
          }
        }
      >
        <Title
          bottom=""
          className=""
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          errorMessage=""
          focus={false}
          height=""
          href={
            Object {
              "selectHandler": [Function],
            }
          }
          id=""
          layout={5}
          left=""
          location="none"
          noedit={true}
          nohover={false}
          noripple={true}
          obj="Tab"
          onClick={[Function]}
          onClose={[Function]}
          orientation="top"
          padding=""
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          title="tab title"
          tooltip=""
          top=""
          visible={true}
          widget={
            <Button
              bottom=""
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              errorMessage=""
              focus={false}
              height=""
              href={
                Object {
                  "selectHandler": [Function],
                }
              }
              iconName="times"
              iconStyle=""
              id=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="Tab"
              onClick={[Function]}
              onClose={[Function]}
              orientation="top"
              padding=""
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              title="tab title"
              tooltip=""
              top=""
              visible={false}
              width=""
              xcss={null}
            >
              Test content
            </Button>
          }
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-title-bar"
              disabled={false}
              layout={5}
              style={Object {}}
              visible={true}
            >
              <div
                className="ui-title-bar sc-htoDjs cflmBR"
                disabled={false}
                style={Object {}}
              >
                <Styled(Label)
                  bottom=""
                  className="ui-title"
                  contentEditable={false}
                  controlled={true}
                  direction="right"
                  disabled={false}
                  errorMessage=""
                  focus={false}
                  height=""
                  href={
                    Object {
                      "selectHandler": [Function],
                    }
                  }
                  id=""
                  layout={5}
                  left=""
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  obj="Tab"
                  onClick={[Function]}
                  onClose={[Function]}
                  orientation="top"
                  padding=""
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  text="tab title"
                  theme={null}
                  title="tab title"
                  tooltip=""
                  top=""
                  visible={true}
                  widget={
                    <Button
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      errorMessage=""
                      focus={false}
                      height=""
                      href={
                        Object {
                          "selectHandler": [Function],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="Tab"
                      onClick={[Function]}
                      onClose={[Function]}
                      orientation="top"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      title="tab title"
                      tooltip=""
                      top=""
                      visible={false}
                      width=""
                      xcss={null}
                    >
                      Test content
                    </Button>
                  }
                  width=""
                  xcss={
                    Array [
                      "
	text-align: left;
	flex: 5;
",
                    ]
                  }
                >
                  <Label
                    bottom=""
                    className="ui-title sc-iwsKbI eCIUBQ"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    errorMessage=""
                    focus={false}
                    height=""
                    href={
                      Object {
                        "selectHandler": [Function],
                      }
                    }
                    id=""
                    layout={5}
                    left=""
                    location="none"
                    noedit={true}
                    nohover={false}
                    noripple={true}
                    obj="Tab"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onClose={[Function]}
                    onDoubleClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onUpdate={[Function]}
                    orientation="top"
                    padding=""
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    text="tab title"
                    theme={null}
                    title="tab title"
                    tooltip=""
                    top=""
                    useedit={false}
                    visible={true}
                    widget={
                      <Button
                        bottom=""
                        className=""
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={false}
                        errorMessage=""
                        focus={false}
                        height=""
                        href={
                          Object {
                            "selectHandler": [Function],
                          }
                        }
                        iconName="times"
                        iconStyle=""
                        id=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Tab"
                        onClick={[Function]}
                        onClose={[Function]}
                        orientation="top"
                        padding=""
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        title="tab title"
                        tooltip=""
                        top=""
                        visible={false}
                        width=""
                        xcss={null}
                      >
                        Test content
                      </Button>
                    }
                    width=""
                    xcss={
                      Array [
                        "
	text-align: left;
	flex: 5;
",
                      ]
                    }
                  >
                    <ThemeProvider
                      theme={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#c0c0c0",
                          "color": "#000000",
                          "headerBackgroundColor": "#004358",
                          "headerForegroundColor": "#ffffff",
                          "headerHoverColor": "#ffe11a",
                          "hoverColor": "#c0c0c0",
                          "inputBorderColor": "#c0c0c0",
                          "selectedBackgroundColor": "#1f8a70",
                          "selectedForegroundColor": "#ffe11a",
                          "tooltipBackgroundColor": "#708090",
                          "tooltipForegroundColor": "#ffffff",
                          "transitionDelay": "0.5s",
                        }
                      }
                    >
                      <styled.span
                        className="ui-label ui-title sc-iwsKbI eCIUBQ"
                        contentEditable={false}
                        disabled={false}
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        sizing="normal"
                        style={Object {}}
                        suppressContentEditableWarning={true}
                        visible={true}
                      >
                        <span
                          className="ui-label ui-title sc-iwsKbI eCIUBQ sc-gzVnrw gpLdFB"
                          contentEditable={false}
                          disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDoubleClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={Object {}}
                          suppressContentEditableWarning={true}
                        >
                          tab title
                        </span>
                      </styled.span>
                    </ThemeProvider>
                  </Label>
                </Styled(Label)>
                <styled.div
                  bottom=""
                  className="ui-title-widget"
                  contentEditable={false}
                  controlled={true}
                  direction="right"
                  disabled={false}
                  errorMessage=""
                  focus={false}
                  height=""
                  href={
                    Object {
                      "selectHandler": [Function],
                    }
                  }
                  id=""
                  layout={5}
                  left=""
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  obj="Tab"
                  onClick={[Function]}
                  onClose={[Function]}
                  orientation="top"
                  padding=""
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={null}
                  title="tab title"
                  tooltip=""
                  top=""
                  visible={true}
                  widget={
                    <Button
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      errorMessage=""
                      focus={false}
                      height=""
                      href={
                        Object {
                          "selectHandler": [Function],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="Tab"
                      onClick={[Function]}
                      onClose={[Function]}
                      orientation="top"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      title="tab title"
                      tooltip=""
                      top=""
                      visible={false}
                      width=""
                      xcss={null}
                    >
                      Test content
                    </Button>
                  }
                  width=""
                  xcss={
                    Array [
                      "
	text-align: right;
	flex: 1;
",
                    ]
                  }
                >
                  <div
                    className="ui-title-widget sc-dnqmqq ePegIQ"
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    height=""
                    href={
                      Object {
                        "selectHandler": [Function],
                      }
                    }
                    id=""
                    onClick={[Function]}
                    orientation="top"
                    selected={false}
                    style={Object {}}
                    title="tab title"
                    width=""
                  >
                    <Button
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      errorMessage=""
                      focus={false}
                      height=""
                      href={
                        Object {
                          "selectHandler": [Function],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="Tab"
                      onClick={[Function]}
                      onClose={[Function]}
                      orientation="top"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      title="tab title"
                      tooltip=""
                      top=""
                      visible={false}
                      width=""
                      xcss={null}
                    >
                      <Wrapper
                        bottom=""
                        className=""
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={false}
                        errorMessage=""
                        focus={false}
                        height=""
                        href={
                          Object {
                            "selectHandler": [Function],
                          }
                        }
                        iconName="times"
                        iconStyle=""
                        id=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Tab"
                        onClick={[Function]}
                        onClose={[Function]}
                        onError={[Function]}
                        orientation="top"
                        padding=""
                        reset={false}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        title="tab title"
                        tooltip=""
                        top=""
                        visible={false}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#c0c0c0",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "selectedBackgroundColor": "#1f8a70",
                              "selectedForegroundColor": "#ffe11a",
                              "tooltipBackgroundColor": "#708090",
                              "tooltipForegroundColor": "#ffffff",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.div
                            className="ui-button ripple"
                            disabled={false}
                            id="Button-0"
                            onClick={[Function]}
                            style={Object {}}
                            visible={false}
                          >
                            <div
                              className="ui-button ripple sc-bZQynM jwUaXA"
                              disabled={false}
                              id="Button-0"
                              onClick={[Function]}
                              style={Object {}}
                            >
                              <Icon
                                bottom=""
                                className=""
                                contentEditable={false}
                                controlled={true}
                                direction="right"
                                disabled={false}
                                errorMessage=""
                                focus={false}
                                height=""
                                iconName="times"
                                id=""
                                imageFile=""
                                left=""
                                location="none"
                                noedit={false}
                                nohover={false}
                                noripple={false}
                                obj="Icon"
                                padding=""
                                selected={false}
                                sizing="normal"
                                style={Object {}}
                                testing={true}
                                theme={null}
                                tooltip=""
                                top=""
                                visible={true}
                                width=""
                                xcss={null}
                              >
                                <ThemeProvider
                                  theme={
                                    Object {
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#c0c0c0",
                                      "color": "#000000",
                                      "headerBackgroundColor": "#004358",
                                      "headerForegroundColor": "#ffffff",
                                      "headerHoverColor": "#ffe11a",
                                      "hoverColor": "#c0c0c0",
                                      "inputBorderColor": "#c0c0c0",
                                      "selectedBackgroundColor": "#1f8a70",
                                      "selectedForegroundColor": "#ffe11a",
                                      "tooltipBackgroundColor": "#708090",
                                      "tooltipForegroundColor": "#ffffff",
                                      "transitionDelay": "0.5s",
                                    }
                                  }
                                >
                                  <styled.i
                                    bottom=""
                                    className="ui-icon fa fa-fw fa-times"
                                    contentEditable={false}
                                    controlled={true}
                                    direction="right"
                                    disabled={false}
                                    errorMessage=""
                                    focus={false}
                                    height=""
                                    iconName="times"
                                    id=""
                                    imageFile=""
                                    left=""
                                    location="none"
                                    noedit={false}
                                    nohover={false}
                                    noripple={false}
                                    obj="Icon"
                                    padding=""
                                    selected={false}
                                    sizing="normal"
                                    style={Object {}}
                                    testing={true}
                                    theme={null}
                                    tooltip=""
                                    top=""
                                    visible={true}
                                    width=""
                                    xcss={null}
                                  >
                                    <i
                                      className="ui-icon fa fa-fw fa-times sc-bwzfXH hBOHvv"
                                      contentEditable={false}
                                      direction="right"
                                      disabled={false}
                                      height=""
                                      id=""
                                      selected={false}
                                      style={Object {}}
                                      width=""
                                    />
                                  </styled.i>
                                </ThemeProvider>
                              </Icon>
                            </div>
                          </styled.div>
                        </ThemeProvider>
                      </Wrapper>
                    </Button>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </ThemeProvider>
        </Title>
      </div>
    </styled.div>
  </ThemeProvider>
</Tab>
`;

exports[`Test retrieval of Tab props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "href": Object {
    "selectHandler": [Function],
  },
  "id": "",
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Tab",
  "onClick": [Function],
  "onClose": [Function],
  "orientation": "top",
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "title": "",
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the click handler in the Tab instance 1`] = `
<Tab
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  href={
    Object {
      "selectHandler": [MockFunction],
    }
  }
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[Function]}
  orientation="top"
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="tab title"
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tab"
      disabled={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "minWidth": "80px",
          "width": "",
        }
      }
      visible={true}
      xcss={
        Array [
          "
	border-right: solid 1px ",
          [Function],
          ";
	border-top: solid 1px ",
          [Function],
          ";

	&:first-child {
		border-left: solid 1px ",
          [Function],
          ";
	}
",
        ]
      }
    >
      <div
        className="ui-tab sc-gZMcBi iCLtjp"
        disabled={false}
        selected={false}
        style={
          Object {
            "minWidth": "80px",
            "width": "",
          }
        }
      >
        <Title
          bottom=""
          className=""
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          errorMessage=""
          focus={false}
          height=""
          href={
            Object {
              "selectHandler": [MockFunction],
            }
          }
          id=""
          layout={5}
          left=""
          location="none"
          noedit={true}
          nohover={false}
          noripple={true}
          obj="Tab"
          onClick={[Function]}
          onClose={[Function]}
          orientation="top"
          padding=""
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          title="tab title"
          tooltip=""
          top=""
          visible={true}
          widget={
            <Button
              bottom=""
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              errorMessage=""
              focus={false}
              height=""
              href={
                Object {
                  "selectHandler": [MockFunction],
                }
              }
              iconName="times"
              iconStyle=""
              id=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="Tab"
              onClick={[Function]}
              onClose={[Function]}
              orientation="top"
              padding=""
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              title="tab title"
              tooltip=""
              top=""
              visible={true}
              width=""
              xcss={null}
            >
              Test content
            </Button>
          }
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-title-bar"
              disabled={false}
              layout={5}
              style={Object {}}
              visible={true}
            >
              <div
                className="ui-title-bar sc-htoDjs cflmBR"
                disabled={false}
                style={Object {}}
              >
                <Styled(Label)
                  bottom=""
                  className="ui-title"
                  contentEditable={false}
                  controlled={true}
                  direction="right"
                  disabled={false}
                  errorMessage=""
                  focus={false}
                  height=""
                  href={
                    Object {
                      "selectHandler": [MockFunction],
                    }
                  }
                  id=""
                  layout={5}
                  left=""
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  obj="Tab"
                  onClick={[Function]}
                  onClose={[Function]}
                  orientation="top"
                  padding=""
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  text="tab title"
                  theme={null}
                  title="tab title"
                  tooltip=""
                  top=""
                  visible={true}
                  widget={
                    <Button
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      errorMessage=""
                      focus={false}
                      height=""
                      href={
                        Object {
                          "selectHandler": [MockFunction],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="Tab"
                      onClick={[Function]}
                      onClose={[Function]}
                      orientation="top"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      title="tab title"
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      Test content
                    </Button>
                  }
                  width=""
                  xcss={
                    Array [
                      "
	text-align: left;
	flex: 5;
",
                    ]
                  }
                >
                  <Label
                    bottom=""
                    className="ui-title sc-iwsKbI eCIUBQ"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    errorMessage=""
                    focus={false}
                    height=""
                    href={
                      Object {
                        "selectHandler": [MockFunction],
                      }
                    }
                    id=""
                    layout={5}
                    left=""
                    location="none"
                    noedit={true}
                    nohover={false}
                    noripple={true}
                    obj="Tab"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onClose={[Function]}
                    onDoubleClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onUpdate={[Function]}
                    orientation="top"
                    padding=""
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    text="tab title"
                    theme={null}
                    title="tab title"
                    tooltip=""
                    top=""
                    useedit={false}
                    visible={true}
                    widget={
                      <Button
                        bottom=""
                        className=""
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={false}
                        errorMessage=""
                        focus={false}
                        height=""
                        href={
                          Object {
                            "selectHandler": [MockFunction],
                          }
                        }
                        iconName="times"
                        iconStyle=""
                        id=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Tab"
                        onClick={[Function]}
                        onClose={[Function]}
                        orientation="top"
                        padding=""
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        title="tab title"
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        Test content
                      </Button>
                    }
                    width=""
                    xcss={
                      Array [
                        "
	text-align: left;
	flex: 5;
",
                      ]
                    }
                  >
                    <ThemeProvider
                      theme={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#c0c0c0",
                          "color": "#000000",
                          "headerBackgroundColor": "#004358",
                          "headerForegroundColor": "#ffffff",
                          "headerHoverColor": "#ffe11a",
                          "hoverColor": "#c0c0c0",
                          "inputBorderColor": "#c0c0c0",
                          "selectedBackgroundColor": "#1f8a70",
                          "selectedForegroundColor": "#ffe11a",
                          "tooltipBackgroundColor": "#708090",
                          "tooltipForegroundColor": "#ffffff",
                          "transitionDelay": "0.5s",
                        }
                      }
                    >
                      <styled.span
                        className="ui-label ui-title sc-iwsKbI eCIUBQ"
                        contentEditable={false}
                        disabled={false}
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        sizing="normal"
                        style={Object {}}
                        suppressContentEditableWarning={true}
                        visible={true}
                      >
                        <span
                          className="ui-label ui-title sc-iwsKbI eCIUBQ sc-gzVnrw gpLdFB"
                          contentEditable={false}
                          disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDoubleClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={Object {}}
                          suppressContentEditableWarning={true}
                        >
                          tab title
                        </span>
                      </styled.span>
                    </ThemeProvider>
                  </Label>
                </Styled(Label)>
                <styled.div
                  bottom=""
                  className="ui-title-widget"
                  contentEditable={false}
                  controlled={true}
                  direction="right"
                  disabled={false}
                  errorMessage=""
                  focus={false}
                  height=""
                  href={
                    Object {
                      "selectHandler": [MockFunction],
                    }
                  }
                  id=""
                  layout={5}
                  left=""
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  obj="Tab"
                  onClick={[Function]}
                  onClose={[Function]}
                  orientation="top"
                  padding=""
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={null}
                  title="tab title"
                  tooltip=""
                  top=""
                  visible={true}
                  widget={
                    <Button
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      errorMessage=""
                      focus={false}
                      height=""
                      href={
                        Object {
                          "selectHandler": [MockFunction],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="Tab"
                      onClick={[Function]}
                      onClose={[Function]}
                      orientation="top"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      title="tab title"
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      Test content
                    </Button>
                  }
                  width=""
                  xcss={
                    Array [
                      "
	text-align: right;
	flex: 1;
",
                    ]
                  }
                >
                  <div
                    className="ui-title-widget sc-dnqmqq ePegIQ"
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    height=""
                    href={
                      Object {
                        "selectHandler": [MockFunction],
                      }
                    }
                    id=""
                    onClick={[Function]}
                    orientation="top"
                    selected={false}
                    style={Object {}}
                    title="tab title"
                    width=""
                  >
                    <Button
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      errorMessage=""
                      focus={false}
                      height=""
                      href={
                        Object {
                          "selectHandler": [MockFunction],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="Tab"
                      onClick={[Function]}
                      onClose={[Function]}
                      orientation="top"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      title="tab title"
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <Wrapper
                        bottom=""
                        className=""
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={false}
                        errorMessage=""
                        focus={false}
                        height=""
                        href={
                          Object {
                            "selectHandler": [MockFunction],
                          }
                        }
                        iconName="times"
                        iconStyle=""
                        id=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Tab"
                        onClick={[Function]}
                        onClose={[Function]}
                        onError={[Function]}
                        orientation="top"
                        padding=""
                        reset={false}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        title="tab title"
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#c0c0c0",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "selectedBackgroundColor": "#1f8a70",
                              "selectedForegroundColor": "#ffe11a",
                              "tooltipBackgroundColor": "#708090",
                              "tooltipForegroundColor": "#ffffff",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.div
                            className="ui-button ripple"
                            disabled={false}
                            id="Button-0"
                            onClick={[Function]}
                            style={Object {}}
                            visible={true}
                          >
                            <div
                              className="ui-button ripple sc-bZQynM caHSLb"
                              disabled={false}
                              id="Button-0"
                              onClick={[Function]}
                              style={Object {}}
                            >
                              <Icon
                                bottom=""
                                className=""
                                contentEditable={false}
                                controlled={true}
                                direction="right"
                                disabled={false}
                                errorMessage=""
                                focus={false}
                                height=""
                                iconName="times"
                                id=""
                                imageFile=""
                                left=""
                                location="none"
                                noedit={false}
                                nohover={false}
                                noripple={false}
                                obj="Icon"
                                padding=""
                                selected={false}
                                sizing="normal"
                                style={Object {}}
                                testing={true}
                                theme={null}
                                tooltip=""
                                top=""
                                visible={true}
                                width=""
                                xcss={null}
                              >
                                <ThemeProvider
                                  theme={
                                    Object {
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#c0c0c0",
                                      "color": "#000000",
                                      "headerBackgroundColor": "#004358",
                                      "headerForegroundColor": "#ffffff",
                                      "headerHoverColor": "#ffe11a",
                                      "hoverColor": "#c0c0c0",
                                      "inputBorderColor": "#c0c0c0",
                                      "selectedBackgroundColor": "#1f8a70",
                                      "selectedForegroundColor": "#ffe11a",
                                      "tooltipBackgroundColor": "#708090",
                                      "tooltipForegroundColor": "#ffffff",
                                      "transitionDelay": "0.5s",
                                    }
                                  }
                                >
                                  <styled.i
                                    bottom=""
                                    className="ui-icon fa fa-fw fa-times"
                                    contentEditable={false}
                                    controlled={true}
                                    direction="right"
                                    disabled={false}
                                    errorMessage=""
                                    focus={false}
                                    height=""
                                    iconName="times"
                                    id=""
                                    imageFile=""
                                    left=""
                                    location="none"
                                    noedit={false}
                                    nohover={false}
                                    noripple={false}
                                    obj="Icon"
                                    padding=""
                                    selected={false}
                                    sizing="normal"
                                    style={Object {}}
                                    testing={true}
                                    theme={null}
                                    tooltip=""
                                    top=""
                                    visible={true}
                                    width=""
                                    xcss={null}
                                  >
                                    <i
                                      className="ui-icon fa fa-fw fa-times sc-bwzfXH hBOHvv"
                                      contentEditable={false}
                                      direction="right"
                                      disabled={false}
                                      height=""
                                      id=""
                                      selected={false}
                                      style={Object {}}
                                      width=""
                                    />
                                  </styled.i>
                                </ThemeProvider>
                              </Icon>
                            </div>
                          </styled.div>
                        </ThemeProvider>
                      </Wrapper>
                    </Button>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </ThemeProvider>
        </Title>
      </div>
    </styled.div>
  </ThemeProvider>
</Tab>
`;

exports[`Test the close click handler on a Tab instance 1`] = `
<Tab
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  href={
    Object {
      "hiddenTabHandler": [MockFunction],
    }
  }
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[MockFunction]}
  orientation="top"
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="tab title"
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tab"
      disabled={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "minWidth": "80px",
          "width": "",
        }
      }
      visible={true}
      xcss={
        Array [
          "
	border-right: solid 1px ",
          [Function],
          ";
	border-top: solid 1px ",
          [Function],
          ";

	&:first-child {
		border-left: solid 1px ",
          [Function],
          ";
	}
",
        ]
      }
    >
      <div
        className="ui-tab sc-gZMcBi iCLtjp"
        disabled={false}
        selected={false}
        style={
          Object {
            "minWidth": "80px",
            "width": "",
          }
        }
      >
        <Title
          bottom=""
          className=""
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          errorMessage=""
          focus={false}
          height=""
          href={
            Object {
              "hiddenTabHandler": [MockFunction],
            }
          }
          id=""
          layout={5}
          left=""
          location="none"
          noedit={true}
          nohover={false}
          noripple={true}
          obj="Tab"
          onClick={[Function]}
          onClose={[MockFunction]}
          orientation="top"
          padding=""
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          title="tab title"
          tooltip=""
          top=""
          visible={true}
          widget={
            <Button
              bottom=""
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              errorMessage=""
              focus={false}
              height=""
              href={
                Object {
                  "hiddenTabHandler": [MockFunction],
                }
              }
              iconName="times"
              iconStyle=""
              id=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="Tab"
              onClick={[Function]}
              onClose={[MockFunction]}
              orientation="top"
              padding=""
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              title="tab title"
              tooltip=""
              top=""
              visible={true}
              width=""
              xcss={null}
            >
              Test content
            </Button>
          }
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-title-bar"
              disabled={false}
              layout={5}
              style={Object {}}
              visible={true}
            >
              <div
                className="ui-title-bar sc-htoDjs cflmBR"
                disabled={false}
                style={Object {}}
              >
                <Styled(Label)
                  bottom=""
                  className="ui-title"
                  contentEditable={false}
                  controlled={true}
                  direction="right"
                  disabled={false}
                  errorMessage=""
                  focus={false}
                  height=""
                  href={
                    Object {
                      "hiddenTabHandler": [MockFunction],
                    }
                  }
                  id=""
                  layout={5}
                  left=""
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  obj="Tab"
                  onClick={[Function]}
                  onClose={[MockFunction]}
                  orientation="top"
                  padding=""
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  text="tab title"
                  theme={null}
                  title="tab title"
                  tooltip=""
                  top=""
                  visible={true}
                  widget={
                    <Button
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      errorMessage=""
                      focus={false}
                      height=""
                      href={
                        Object {
                          "hiddenTabHandler": [MockFunction],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="Tab"
                      onClick={[Function]}
                      onClose={[MockFunction]}
                      orientation="top"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      title="tab title"
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      Test content
                    </Button>
                  }
                  width=""
                  xcss={
                    Array [
                      "
	text-align: left;
	flex: 5;
",
                    ]
                  }
                >
                  <Label
                    bottom=""
                    className="ui-title sc-iwsKbI eCIUBQ"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    errorMessage=""
                    focus={false}
                    height=""
                    href={
                      Object {
                        "hiddenTabHandler": [MockFunction],
                      }
                    }
                    id=""
                    layout={5}
                    left=""
                    location="none"
                    noedit={true}
                    nohover={false}
                    noripple={true}
                    obj="Tab"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onClose={[MockFunction]}
                    onDoubleClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onUpdate={[Function]}
                    orientation="top"
                    padding=""
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    text="tab title"
                    theme={null}
                    title="tab title"
                    tooltip=""
                    top=""
                    useedit={false}
                    visible={true}
                    widget={
                      <Button
                        bottom=""
                        className=""
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={false}
                        errorMessage=""
                        focus={false}
                        height=""
                        href={
                          Object {
                            "hiddenTabHandler": [MockFunction],
                          }
                        }
                        iconName="times"
                        iconStyle=""
                        id=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Tab"
                        onClick={[Function]}
                        onClose={[MockFunction]}
                        orientation="top"
                        padding=""
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        title="tab title"
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        Test content
                      </Button>
                    }
                    width=""
                    xcss={
                      Array [
                        "
	text-align: left;
	flex: 5;
",
                      ]
                    }
                  >
                    <ThemeProvider
                      theme={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#c0c0c0",
                          "color": "#000000",
                          "headerBackgroundColor": "#004358",
                          "headerForegroundColor": "#ffffff",
                          "headerHoverColor": "#ffe11a",
                          "hoverColor": "#c0c0c0",
                          "inputBorderColor": "#c0c0c0",
                          "selectedBackgroundColor": "#1f8a70",
                          "selectedForegroundColor": "#ffe11a",
                          "tooltipBackgroundColor": "#708090",
                          "tooltipForegroundColor": "#ffffff",
                          "transitionDelay": "0.5s",
                        }
                      }
                    >
                      <styled.span
                        className="ui-label ui-title sc-iwsKbI eCIUBQ"
                        contentEditable={false}
                        disabled={false}
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        sizing="normal"
                        style={Object {}}
                        suppressContentEditableWarning={true}
                        visible={true}
                      >
                        <span
                          className="ui-label ui-title sc-iwsKbI eCIUBQ sc-gzVnrw gpLdFB"
                          contentEditable={false}
                          disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDoubleClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={Object {}}
                          suppressContentEditableWarning={true}
                        >
                          tab title
                        </span>
                      </styled.span>
                    </ThemeProvider>
                  </Label>
                </Styled(Label)>
                <styled.div
                  bottom=""
                  className="ui-title-widget"
                  contentEditable={false}
                  controlled={true}
                  direction="right"
                  disabled={false}
                  errorMessage=""
                  focus={false}
                  height=""
                  href={
                    Object {
                      "hiddenTabHandler": [MockFunction],
                    }
                  }
                  id=""
                  layout={5}
                  left=""
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  obj="Tab"
                  onClick={[Function]}
                  onClose={[MockFunction]}
                  orientation="top"
                  padding=""
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={null}
                  title="tab title"
                  tooltip=""
                  top=""
                  visible={true}
                  widget={
                    <Button
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      errorMessage=""
                      focus={false}
                      height=""
                      href={
                        Object {
                          "hiddenTabHandler": [MockFunction],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="Tab"
                      onClick={[Function]}
                      onClose={[MockFunction]}
                      orientation="top"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      title="tab title"
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      Test content
                    </Button>
                  }
                  width=""
                  xcss={
                    Array [
                      "
	text-align: right;
	flex: 1;
",
                    ]
                  }
                >
                  <div
                    className="ui-title-widget sc-dnqmqq ePegIQ"
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    height=""
                    href={
                      Object {
                        "hiddenTabHandler": [MockFunction],
                      }
                    }
                    id=""
                    onClick={[Function]}
                    orientation="top"
                    selected={false}
                    style={Object {}}
                    title="tab title"
                    width=""
                  >
                    <Button
                      bottom=""
                      className=""
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      errorMessage=""
                      focus={false}
                      height=""
                      href={
                        Object {
                          "hiddenTabHandler": [MockFunction],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="Tab"
                      onClick={[Function]}
                      onClose={[MockFunction]}
                      orientation="top"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      title="tab title"
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <Wrapper
                        bottom=""
                        className=""
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={false}
                        errorMessage=""
                        focus={false}
                        height=""
                        href={
                          Object {
                            "hiddenTabHandler": [MockFunction],
                          }
                        }
                        iconName="times"
                        iconStyle=""
                        id=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Tab"
                        onClick={[Function]}
                        onClose={[MockFunction]}
                        onError={[Function]}
                        orientation="top"
                        padding=""
                        reset={false}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        title="tab title"
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#c0c0c0",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "selectedBackgroundColor": "#1f8a70",
                              "selectedForegroundColor": "#ffe11a",
                              "tooltipBackgroundColor": "#708090",
                              "tooltipForegroundColor": "#ffffff",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.div
                            className="ui-button ripple"
                            disabled={false}
                            id="Button-0"
                            onClick={[Function]}
                            style={Object {}}
                            visible={true}
                          >
                            <div
                              className="ui-button ripple sc-bZQynM caHSLb"
                              disabled={false}
                              id="Button-0"
                              onClick={[Function]}
                              style={Object {}}
                            >
                              <Icon
                                bottom=""
                                className=""
                                contentEditable={false}
                                controlled={true}
                                direction="right"
                                disabled={false}
                                errorMessage=""
                                focus={false}
                                height=""
                                iconName="times"
                                id=""
                                imageFile=""
                                left=""
                                location="none"
                                noedit={false}
                                nohover={false}
                                noripple={false}
                                obj="Icon"
                                padding=""
                                selected={false}
                                sizing="normal"
                                style={Object {}}
                                testing={true}
                                theme={null}
                                tooltip=""
                                top=""
                                visible={true}
                                width=""
                                xcss={null}
                              >
                                <ThemeProvider
                                  theme={
                                    Object {
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#c0c0c0",
                                      "color": "#000000",
                                      "headerBackgroundColor": "#004358",
                                      "headerForegroundColor": "#ffffff",
                                      "headerHoverColor": "#ffe11a",
                                      "hoverColor": "#c0c0c0",
                                      "inputBorderColor": "#c0c0c0",
                                      "selectedBackgroundColor": "#1f8a70",
                                      "selectedForegroundColor": "#ffe11a",
                                      "tooltipBackgroundColor": "#708090",
                                      "tooltipForegroundColor": "#ffffff",
                                      "transitionDelay": "0.5s",
                                    }
                                  }
                                >
                                  <styled.i
                                    bottom=""
                                    className="ui-icon fa fa-fw fa-times"
                                    contentEditable={false}
                                    controlled={true}
                                    direction="right"
                                    disabled={false}
                                    errorMessage=""
                                    focus={false}
                                    height=""
                                    iconName="times"
                                    id=""
                                    imageFile=""
                                    left=""
                                    location="none"
                                    noedit={false}
                                    nohover={false}
                                    noripple={false}
                                    obj="Icon"
                                    padding=""
                                    selected={false}
                                    sizing="normal"
                                    style={Object {}}
                                    testing={true}
                                    theme={null}
                                    tooltip=""
                                    top=""
                                    visible={true}
                                    width=""
                                    xcss={null}
                                  >
                                    <i
                                      className="ui-icon fa fa-fw fa-times sc-bwzfXH hBOHvv"
                                      contentEditable={false}
                                      direction="right"
                                      disabled={false}
                                      height=""
                                      id=""
                                      selected={false}
                                      style={Object {}}
                                      width=""
                                    />
                                  </styled.i>
                                </ThemeProvider>
                              </Icon>
                            </div>
                          </styled.div>
                        </ThemeProvider>
                      </Wrapper>
                    </Button>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </ThemeProvider>
        </Title>
      </div>
    </styled.div>
  </ThemeProvider>
</Tab>
`;

exports[`Test the creation of a Tab instance 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-tab ui-selected"
    disabled={false}
    selected={true}
    sizing="normal"
    style={
      Object {
        "minWidth": "80px",
        "width": "",
      }
    }
    visible={true}
    xcss={
      Array [
        "
	border-right: solid 1px ",
        [Function],
        ";
	border-top: solid 1px ",
        [Function],
        ";

	&:first-child {
		border-left: solid 1px ",
        [Function],
        ";
	}
",
      ]
    }
  >
    <Title
      bottom=""
      className=""
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      errorMessage=""
      focus={false}
      height=""
      href={
        Object {
          "selectHandler": [Function],
        }
      }
      id=""
      layout={5}
      left=""
      location="none"
      noedit={true}
      nohover={false}
      noripple={true}
      obj="Tab"
      onClick={[Function]}
      onClose={[Function]}
      orientation="top"
      padding=""
      selected={true}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="tab title"
      tooltip=""
      top=""
      visible={true}
      widget={
        <Button
          bottom=""
          className=""
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          errorMessage=""
          focus={false}
          height=""
          href={
            Object {
              "selectHandler": [Function],
            }
          }
          iconName="times"
          iconStyle=""
          id=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Tab"
          onClick={[Function]}
          onClose={[Function]}
          orientation="top"
          padding=""
          selected={true}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          title="tab title"
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        >
          Test content
        </Button>
      }
      width=""
      xcss={null}
    >
      Test content
    </Title>
  </styled.div>
</ThemeProvider>
`;
